[gd_scene format=3 uid="uid://b0hdbhv7ugnn2"]

[ext_resource type="Script" uid="uid://b5jrwuaqe4dpo" path="res://Scripts/pause_menu.gd" id="1_2nc7s"]
[ext_resource type="Texture2D" uid="uid://bo4msm1mtcsye" path="res://Assets/PAUSEMENU_BACKGROUND.png" id="1_p81d2"]
[ext_resource type="Texture2D" uid="uid://pkhvus1uylyu" path="res://Assets/CONTINUE_BUTTON.png" id="2_2nc7s"]
[ext_resource type="Texture2D" uid="uid://dihpc1rli5ett" path="res://Assets/SETTINGS_BUTTON2.png" id="3_d3xb4"]
[ext_resource type="Texture2D" uid="uid://cdgkwhhpbai40" path="res://Assets/EXIT_BUTTON.png" id="4_mxa3g"]

[node name="Pause Menu" type="Control" unique_id=2515565]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2nc7s")

[node name="Background" type="Sprite2D" parent="." unique_id=1656503457]
position = Vector2(569.00006, 307)
scale = Vector2(0.41000006, 0.41000006)
texture = ExtResource("1_p81d2")
metadata/_edit_lock_ = true

[node name="Continue" type="TextureButton" parent="Background" unique_id=69044078]
offset_left = -546.3415
offset_top = -660.9755
offset_right = 236.65851
offset_bottom = -330.97552
texture_normal = ExtResource("2_2nc7s")
texture_pressed = ExtResource("2_2nc7s")

[node name="Settings" type="TextureButton" parent="Background" unique_id=723084020]
offset_left = -553.6586
offset_top = 99.999985
offset_right = 233.34137
offset_bottom = 445.0
texture_normal = ExtResource("3_d3xb4")
texture_pressed = ExtResource("3_d3xb4")

[node name="Exit" type="TextureButton" parent="Background" unique_id=256521156]
offset_left = -104.87818
offset_top = -246.34142
offset_right = 572.1218
offset_bottom = 86.658585
texture_normal = ExtResource("4_mxa3g")
texture_pressed = ExtResource("4_mxa3g")

[connection signal="pressed" from="Background/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Background/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Background/Exit" to="." method="_on_exit_pressed"]
