extends Control


func _on_continue_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/game.tscn")


func _on_settings_pressed() -> void:
	global.return_to = "pause"
	get_tree().change_scene_to_file("res://Scenes/settings_menu.tscn")


func _on_exit_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/start_menu.tscn")
